# carpet

./: .gitignore  Cargo.toml  README.md  out.parquet.REMOVED.git-id
.github/workflows/: rust.yml
src/: main.rs
src/carpet_parquet/: column.rs  parquet_file.rs  row_group.rs
src/parquet_file/: column.rs  mod.rs  parquet_file.rs  row_group.rs
