[package]
name = "carpet"
version = "0.9.0"
authors = ["Eric Wong <eric@curology.com>", "Max Countryman <max@curology.com>"]
edition = "2018"
repository = "https://github.com/PocketDerm/carpet"
description = "A CLI tool to find and replace strings in Parquet files."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parquet = { git = "https://github.com/apache/arrow", rev = "464d557"}

[dev-dependencies]
assert_cmd = "1.0.1"
tempfile = "3"